--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.7.1
-numpy==1.19.5
-matplotlib==3.4.3
-torch==1.8.2
-skorch==0.10.0
-scikit-learn==0.24.2
+streamlit
+numpy
+matplotlib
+torch
+skorch
+scikit-learn
